# Vision

./: README.md
data/: readingsCalibRoboCam.md  roboCamCalib  roboCamCalib4k
docs/: conf.py  docs_function.rst  function_reference.rst  index.rst  processing_flow.rst
src/: UWB_GPS.py  UWB_Ranging.py  camera_calibration.py  guess_aruco_type.py  localisation_aruco.py  pose_aruco.py
src/CameraCalibration/: CMakeLists.txt  bundle_adjustment_inc.cpp
src/CameraCalibration/src/: aruco_detection.cpp  camera_calibration.cpp  pose_estimation_book1.cpp  pose_estimation_book3.cpp  video_stabilization.cpp
src/aruco_detection_localisation/: guess_aruco_type.py  pose_estimation_aruco.py
src/jetson/: localisation_aruco.py
src/multi_camera_localisation/: 2_cam_localisation.py  bundle_adjustment_inc.py  camera_handling.py  n_cam_extrinsic_calculation.py  n_cam_localisation.py  plotting.py  scene.py  triangulation.py
src/multi_camera_localisation/deploy/: SBC_run_detection.py  image_acquisition.py  main_computer_receive.py  triangulation.py
src/multi_camera_localisation/distributed/: run_detection.py  scene.py  triangulation.py
src/multi_camera_localisation/test/: triangulation.py  varCam.py
src/multi_camera_localisation/testing/: n_cam_extrinsic_calculation.py  n_cam_localisation.py
src/video_stream_processing/: camera_calibration.py  requirements.txt  test.py  vid_stream.py  video_format_test.zsh
